DTSAM-183 SSCS Multi-region refactor
   [DTSAM-183](https://tools.hmcts.net/jira/browse/DTSAM-183)

SSCS Multi-region refactor for both CTSC and non-CTSC roles.